istio-teaching/workloadentries/locality/se-mongodb-locality.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: mongodb-se
spec:
  hosts:
  - mongodb.vm.demo
  addresses:
  - 192.168.198.177
  location: MESH_INTERNAL
  ports:
  - number: 27017
    name: tcp
    protocol: TCP
    targetPort: 27017
  resolution: STATIC
  workloadSelector:
    labels:
      app: mongodb
      type: vm
