istio-teaching/workloadentries/locality/vs-mongodb-locality.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-mongodb-vm
spec:
  hosts:
  - "mongodb.vm.demo"
  tcp:
  - route:
    - destination:
        host: mongodb.vm.demo
